syntax = "proto3";

package perm.v1;

option go_package = "./permpb;permpb";

import "protoc-gen-openapiv2/options/annotations.proto";
import "perm/v1/menu.proto";

// Perm grpc service, Perm for authentication and resource list
service PermService {
  rpc Enforce (EnforceRequest) returns (EnforceResponse) {}

  rpc ListResources (PermServiceListResourcesRequest) returns (PermServiceListResourcesResponse) {}

  rpc ListMenus (PermServiceListMenusRequest) returns (PermServiceListMenusResponse) {}

  rpc ListGroups (PermServiceListGroupsRequest) returns (PermServiceListGroupsResponse) {}

  rpc SaveRolePerm (PermServiceSaveRolePermRequest) returns (PermServiceSaveRolePermResponse) {}
}

message EnforceRequest {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      title: "SimpleMessage"
      description: "A simple message."
      required: ["id"]
    }
  };

  // organization
  string org_id = 1;

  // user_id or role_id must be selected
  string user_id = 2;
  string role_id = 3;

  // resource type, e.g. "box", "camera", "api", etc.
  string res_type = 4;
  string group_type = 5;

  // resource id, e.g. "123", "/api/cameras", etc.
  string res_id = 6;

  // resource act, e.g. "post", "export", "play", "download", etc.
  string act = 7;
}

message EnforceResponse {
  bool ok = 1;
  string code = 2;
}

message PermServiceSaveRolePermRequest {
  message Group {
    string res_type = 1;
    string group_type = 2;
    string group_id = 3;
  }

  string org_id = 1;
  string role_id = 2;
  repeated string menus = 3;
  repeated Group groups = 4;
}

message PermServiceSaveRolePermResponse {}

message PermServiceListGroupsRequest {
  string org_id = 1;
  string user_id = 2;
  string role_id = 3;
  string res_type = 4;
  string act = 5;
}

message PermGroup {
  string res_type = 1;
  string group_type = 2;
  string group_id = 3;
  repeated string resources = 4;
  repeated PermGroup children = 5;
  repeated string acts = 6;
}

message PermServiceListGroupsResponse {
  repeated PermGroup groups = 1;
}

message PermServiceListMenusRequest {
  string org_id = 1;
  string user_id = 2;
  string role_id = 3;
  string platform = 4;
}

message PermServiceListMenusResponse {
  repeated MenuItem items = 1;
}

message PermServiceListResourcesRequest {
  string org_id = 1;
  string user_id = 2;
  string role_id = 3;
  string res_type = 4;
  string act = 5;
}

message Resource {
  string res_id = 1;
  repeated string acts = 2;
}

message PermServiceListResourcesResponse {
  repeated Resource resources = 1;
}
